--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, intial-scale=1">
 <meta name='author' content='Ben Browning'>
 <meta name='title' content='Ben Browning'>
-<meta name='description' content='Ben Browning is a Graphic Designer living in London. His practice focuses on typography, layout, branding and research based work. '>
+<meta name='description' content='Ben Browning is a Product Designer, and Graphic Designer currently working in UX/UI. '>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <title>Ben Browning</title>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
@@ -27,166 +27,69 @@ sizes="24x24">
 
 </head>
 <body>
+    <div id="cursor-blob"></div>
+    <script src="script.js"></script>
+    <div class="background-wrapper">
+        <div class="content-wrapper">
+            <img id="wizardImage" alt="Wizard image" class="background-image">
+            <div class="content">
+                <h1>Welcome,</h1>
+                <h1>My name is Ben Browning</h1>
+            </div>
+        </div>
+    </div>
+    <script>
+        window.onload = function() {
+    var images = ['img/wiz1.png', 'img/wiz2.png'];
+    var image = images[Math.floor(Math.random() * images.length)];
+    var wizardImage = document.getElementById('wizardImage');
+    wizardImage.onload = function() {
+        document.querySelector('.content-wrapper').classList.add('visible');
+    };
+    wizardImage.src = image;
+};
 
-<div class="site-content">
-<main>
-<div class="intro">
-    <h1>Ben Browning is a Graphic Designer living in London. His practice focuses on typography, layout, branding and research based work. Get in touch on <a href="https://www.instagram.com/brwnng/" target="_blank">Instagram</a>, or e-mail <a href="mailto:benjamin.browning@hotmail.co.uk">benjamin.browning@hotmail.co.uk</a></h1>
-</div>
-<div class="grid-container">
-<div class="grid-item"><h2>01</h2></div>
-<div class="grid-item" id="archives"><a href="archive.html"><h2>MOD Archive Research</h2></a></div>
-<div class="grid-item"><h2>2018</h2></div>
-<div class="grid-item"><h2>02</h2></div> 
-<div class="grid-item" id="bagd"><a href="gdshow.html"><h2>BA Graphic Design Degree Show</h2></a></div>
-<div class="grid-item"><h2>2018</h2></div> 
-<div class="grid-item"><h2>03</h2></div>
-<div class="grid-item" id="antiquity"><a href="antiquity.html"><h2>UFO Sightings of Antiquity</h2></a></div>
-<div class="grid-item"><h2>2018</h2></div> 
-<div class="grid-item"><h2>04</h2></div>
-<div class="grid-item" id="sighting"><a href="sightings.html"><h2>UK Sighting Reports</h2></a></div>
-<div class="grid-item"><h2>2018</h2></div> 
-<div class="grid-item"><h2>05</h2></div>
-<div class="grid-item" id="hs"><a href="harvardsentences.html"><h2>Harvard Sentences</h2></a></div>
-<div class="grid-item"><h2>2017</h2></div>
-<div class="grid-item"><h2>06</h2></div>
-<div class="grid-item" id="pair"><a href="anicepair.html"><h2>A Nice Pair</h2></a></div>
-<div class="grid-item"><h2>2017</h2></div> 
-<div class="grid-item"><h2>07</h2></div>
-<div class="grid-item" id="chess"><a href="chess.html"><h2>Visualising Chess Moves</h2></a></div>
-<div class="grid-item"><h2>2017</h2></div> 
-<div class="grid-item"><h2>08</h2></div>
-<div class="grid-item" id="notebook"><a href="rednotebook.html"><h2>The Red Notebook</h2></a></div>
-<div class="grid-item"><h2>2016</h2></div> 
-<div class="grid-item"><h2>09</h2></div>
-<div class="grid-item" id="park"><a href="peckhamrye.html"><h2>Peckham Rye Park Identity</h2></a></div>
-<div class="grid-item"><h2>2016</h2></div> 
-</div>
-    
-</main>
+const cursorBlob = document.getElementById('cursor-blob');
+let mouseX = 0, mouseY = 0, posX = 0, posY = 0;
 
-</div>
-    <div class="img1">
-<img src="img/ufo_7.jpg">
-    </div>
-    <div class="img2">
-<img src="img/banner_bagd.jpg">
-    </div>
-    <div class="img3">
-<img src="img/antiquity_display.jpg">
-    </div>
-    <div class="img4">
-<img src="img/ufop_6.jpg">
-    </div>
-    <div class="img5">
-<video width="100%" height="auto" autoplay muted loop>
-  <source src="img/harvard_sentences.webm" type="video/webm">
-        </video></div>
-    <div class="img6">
-<img src="img/anicepair2.jpg">
-    </div>
-    <div class="img7">
-<video width="100%" height="auto" autoplay muted loop>
-  <source src="img/chessw.webm" type="video/webm">
-</video>
-    </div>
-    <div class="img8">
-<img src="img/rednotebook2.jpg">
-    </div>
-    <div class="img9">
-<img src="img/park.jpg">
-    </div>
-    
+function mouseCoords(e) {
+    mouseX = e.clientX;
+    mouseY = e.clientY;
+}
 
-<script>
-$(document).ready(function(){
-$("#archives").mouseover(function(){
-$(".img1").show();
-});
-$("#archives").mouseout(function(){
-$(".img1").hide();
-});
-});
-</script> <!--01-->
-<script>
-$(document).ready(function(){
-$("#bagd").mouseover(function(){
-$(".img2").show();
-});
-$("#bagd").mouseout(function(){
-$(".img2").hide();
-});
-});
-</script> <!--02-->
-<script>
-$(document).ready(function(){
-$("#antiquity").mouseover(function(){
-$(".img3").show();
-});
-$("#antiquity").mouseout(function(){
-$(".img3").hide();
-});
-});
-</script> <!--03-->
-<script>
-$(document).ready(function(){
-$("#sighting").mouseover(function(){
-$(".img4").show();
-});
-$("#sighting").mouseout(function(){
-$(".img4").hide();
-});
-});
-</script> <!--04-->
-<script>
-$(document).ready(function(){
-$("#hs").mouseover(function(){
-$(".img5").show();
-});
-$("#hs").mouseout(function(){
-$(".img5").hide();
-});
-});
-</script> <!--05-->
-<script>
-$(document).ready(function(){
-$("#pair").mouseover(function(){
-$(".img6").show();
-});
-$("#pair").mouseout(function(){
-$(".img6").hide();
-});
-});
-</script> <!--06-->
-<script>
-$(document).ready(function(){
-$("#chess").mouseover(function(){
-$(".img7").show();
-});
-$("#chess").mouseout(function(){
-$(".img7").hide();
-});
-});
-</script> <!--07-->
-<script>
-$(document).ready(function(){
-$("#notebook").mouseover(function(){
-$(".img8").show();
-});
-$("#notebook").mouseout(function(){
-$(".img8").hide();
-});
-});
-</script> <!--08-->
-<script>
-$(document).ready(function(){
-$("#park").mouseover(function(){
-$(".img9").show();
-});
-$("#park").mouseout(function(){
-$(".img9").hide();
-});
-});
-</script> <!--09-->
+function animate() {
+    posX += (mouseX - posX) / 5;
+    posY += (mouseY - posY) / 5;
+
+    cursorBlob.style.transform = `translate3d(${posX - 15}px, ${posY - 15}px, 0)`;
+
+    requestAnimationFrame(animate);
+}
+
+function addParticle(x, y) {
+    const particle = document.createElement('div');
+    particle.classList.add('particle');
+    particle.style.left = `${x + (Math.random() - 0.5) * 20}px`;
+    particle.style.top = `${y + (Math.random() - 0.5) * 20}px`;
+    particle.style.transform = `rotate(${Math.random() * 360}deg)`; // Random initial rotation
+
+    document.body.appendChild(particle);
+
+    setTimeout(() => {
+        document.body.removeChild(particle);
+    }, 1000);
+}
+
+function emitParticles() {
+    addParticle(posX, posY);
+}
+
+setInterval(emitParticles, 100); // Emit particles every 100 milliseconds
+
+window.addEventListener('mousemove', mouseCoords);
+animate();
+
+
+    </script>
 </body>
 </html>
