--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@ sizes="24x24">
 </head>
 <body>
   <div class="center-container">
-    <p class="headline">NEW WEBSITE SOON</p>
+    <p class="headline">E-MAIL ME ↓</p>
     <p class="contact" onclick="copyEmail()">bnbrw@proton.me</p>
   </div>
 
-  <p class="updated">Updated&nbsp;&nbsp;05/01/2025</p>
+  <p class="updated">Updated&nbsp;&nbsp;30/11/2025</p>
 
   <script src="scripts.js"></script>
 </body>
