--- a/lois/lois.html
+++ b/lois/lois.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lois</title>
-    <link rel="icon" type="image/png" href="img/logo-2.png" />
-<link rel="apple-touch-icon" href="img/logo-2.png" />
+    <link rel="icon" type="image/png" href="img/logo-3.png" />
+<link rel="apple-touch-icon" href="img/logo-3.png" />
 
 
     <!-- Source Serif 4 -->
@@ -63,7 +63,7 @@
 
       <section class="right">
         <div class="hero-frame">
-  <img class="hero-image" src="img/img-1.png" alt="" />
+  <img class="hero-image" src="img/1.jpg" alt="" />
 </div>
 
       </section>
