--- a/lois/lois-2.html
+++ b/lois/lois-2.html
@@ -1,4 +1,3 @@
-<!-- lois-2.html -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -9,7 +8,6 @@
     <link rel="icon" type="image/png" href="img/logo-3.png" />
     <link rel="apple-touch-icon" href="img/logo-3.png" />
 
-    <!-- Keep these for footer typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,15 +19,10 @@
   </head>
 
   <body>
-    <!-- Mobile-only header (shown only after breakpoint) -->
     <header class="mobile-header" aria-label="Site header">
       <img class="mobile-logo" src="img/logo-4.png" alt="Lois Hannah Interiors" />
       <nav class="mobile-nav" aria-label="Quick links">
-        <a
-          class="mobile-link"
-          href="https://www.instagram.com/loishannahinteriors"
-          target="_blank"
-          rel="noopener"
+        <a class="mobile-link" href="https://www.instagram.com/loishannahinteriors" target="_blank" rel="noopener"
           >Instagram</a
         >
         <a class="mobile-link" href="mailto:lois@loishannah.co.uk">E-mail</a>
@@ -38,36 +31,30 @@
 
     <main class="page">
       <section class="left">
-        <!-- Desktop logo (fixed on desktop only) -->
         <img class="logo" src="img/logo-1.png" alt="Lois Hannah Interiors" />
 
         <div class="intro">
           <p>
-            After training at Lambart &amp; Browne and then <em>award-winning</em> Maddux Creative
-            in London, Lois set up her own studio with over 8 years of experience in the industry.
+            After training at Lambart &amp; Browne and then <em>award-winning</em> Maddux Creative in London, Lois set up
+            her own studio with over 8 years of experience in the industry.
           </p>
 
           <p>
-            We work alongside trusted trades and craftspeople to deliver projects from
-            <em>concept to completion</em>. With the client at the heart of every project we use an
-            extensive knowledge of references and trusted suppliers to make every interior
-            <em>unique</em>.
+            We work alongside trusted trades and craftspeople to deliver projects from <em>concept to completion</em>.
+            With the client at the heart of every project we use an extensive knowledge of references and trusted
+            suppliers to make every interior <em>unique</em>.
           </p>
 
           <p>
             To see a selection of interiors, objects and inspiration find Lois Hannah Interiors on
-            <a
-              class="linkish"
-              href="https://www.instagram.com/loishannahinteriors"
-              target="_blank"
-              rel="noopener"
+            <a class="linkish" href="https://www.instagram.com/loishannahinteriors" target="_blank" rel="noopener"
               >instagram</a
             >.
           </p>
 
           <p>
             If you would like to discuss a project or request a portfolio, please
-            <button class="copy-link" type="button">get in touch</button>.
+            <a class="linkish" href="mailto:lois@loishannah.co.uk">get in touch</a>.
           </p>
         </div>
       </section>
@@ -87,16 +74,11 @@
       </div>
 
       <div class="footer-inner">
-        <a
-          class="footer-ig"
-          href="https://www.instagram.com/loishannahinteriors"
-          target="_blank"
-          rel="noopener"
+        <a class="footer-ig" href="https://www.instagram.com/loishannahinteriors" target="_blank" rel="noopener"
           >Instagram</a
         >
-
         <span class="footer-dot">·</span>
-        <span class="footer-linkish">lois@loishannah.co.uk</span>
+        <a class="footer-email" href="mailto:lois@loishannah.co.uk">lois@loishannah.co.uk</a>
         <span class="footer-dot">·</span>
         <span class="footer-copy">© 2026</span>
       </div>
