--- a/lois/index.html
+++ b/lois/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lois</title>
 
-    <link rel="icon" type="image/png" href="img/logo-3.png" />
-    <link rel="apple-touch-icon" href="img/logo-3.png" />
+    <title>Lois Hannah Interiors</title>
+    <meta
+      name="description"
+      content="London based interior designer working on large and small scale projects from concept to completion."
+    />
+
+    <link rel="canonical" href="https://loishannah.co.uk/" />
+    <meta name="robots" content="index,follow,max-image-preview:large" />
+
+    <link rel="icon" type="image/png" href="img/icon.png" />
+    <link rel="apple-touch-icon" href="img/icon.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,12 +23,12 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="styles-lois-2.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
     <header class="mobile-header" aria-label="Site header">
-      <img class="mobile-logo" src="img/logo-4.png" alt="Lois Hannah Interiors" />
+      <img class="mobile-logo" src="img/logo-mobile.png" alt="Lois Hannah Interiors" />
       <nav class="mobile-nav" aria-label="Quick links">
         <a class="mobile-link" href="https://www.instagram.com/loishannahinteriors" target="_blank" rel="noopener"
           >Instagram</a
@@ -31,7 +39,7 @@
 
     <main class="page">
       <section class="left">
-        <img class="logo" src="img/logo-1.png" alt="Lois Hannah Interiors" />
+        <img class="logo" src="img/logo.png" alt="Lois Hannah Interiors" />
 
         <div class="intro">
           <p>
@@ -61,7 +69,7 @@
 
       <section class="right">
         <div class="hero-frame">
-          <img class="hero-image" src="img/1.jpg" alt="" />
+          <img class="hero-image" src="img/item-1.jpg" alt="" />
         </div>
       </section>
     </main>
@@ -84,9 +92,9 @@
       </div>
 
       <div class="footer-shield" aria-hidden="true"></div>
-      <img class="footer-logo" src="img/logo-2.png" alt="" />
+      <img class="footer-logo" src="img/footer.png" alt="" />
     </footer>
 
-    <script src="lois-2.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
